--- a/paper/__latexindent_temp.tex
+++ b/paper/__latexindent_temp.tex
@@ -85,6 +85,8 @@ author="Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J.",
 title="{AC}: A Compression Tool for Amino Acid Sequences",
 journal="Interdisciplinary Sciences: Computational Life Sciences",
 year="2019",
+month="Mar",
+day="01",
 volume="11",
 number="1",
 pages="68--76",
