--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -41,9 +41,9 @@
 
 %%%\balance
 \input{method.tex}
-\input{experiment.tex}
-\input{result.tex}
-\input{tool.tex}
+% \input{experiment.tex}
+% \input{result.tex}
+% \input{tool.tex}
 \input{references.tex}
 
 \end{document}
