--- a/paper/method.tex
+++ b/paper/method.tex
@@ -66,7 +66,7 @@ The schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. \smas
 \smashpp works on the basis of cooperation between finite-context models (FCMs) and substitutional tolerant Markov models (STMMs), as illustrated in Fig.~\ref{fig.model}. Applying these models on various contexts, seen in the past, provides probability and weight values, which are then mixed to provide the final probability ($P$) of the next symbol, G in this case. The following subsections describe FCMs and STMMs in detail.
 
 \begin{figure}[!h]
-% \includegraphics[]{data_model.pdf}
+\includegraphics[]{data_model.pdf}
 \caption{model.}
 \label{fig.model}
 \end{figure}
