--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -72,6 +72,10 @@
 	basicstyle=\small\ttfamily,
 }
 
+%%%%%  Algorithms
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+
 %%%%%  Captions
 \usepackage[figurename=Fig., tablename=Table, labelfont=bf, labelsep=period, font=small]{caption}
 \renewcommand{\thefigure}{S\arabic{figure}}
