--- a/paper/method.tex
+++ b/paper/method.tex
@@ -125,6 +125,37 @@ The FCMs and STMMs include, in fact, count values which need to be saved in memo
 \end{equation*}
 
 
+\begin{minipage}{.6\linewidth}
+\begin{algorithm}[H]
+  \caption{Count-Min-Log Sketch UPDATE}\label{euclid}
+  \begin{algorithmic}[1]
+    \Require sketch width $w$, sketch depth $d$, logarithm base $b>1$, independent hash functions $h_{1\ldots d}: U\to \{1\ldots w\}$
+    \Function{\textsc{IncreaseDecision}}{$c$}
+    \State \textbf{return} True with probability $b^{-c}$, else False
+    \EndFunction
+    \State
+    \Function{\textsc{Update}}{$e$}
+    \State $c\gets \min_{1\leq k\leq d}\; \mathrm{sk}[k, h_k(e)]$
+    \If{\textsc{IncreaseDecision($c$)}}
+    \For{$k\gets 1\ldots d$}
+    \If{$\mathrm{sk}[k, h_k(e)] = c$}
+    \State $\mathrm{sk}[k, h_k(e)]\gets c+1$
+    \EndIf
+    \EndFor
+    \EndIf
+    \EndFunction
+  % \State $r\gets a\bmod b$
+  % \While{$r\not=0$}\Comment{We have the answer if r is 0}
+  % \State $a\gets b$
+  % \State $b\gets r$
+  % \State $r\gets a\bmod b$
+  % \EndWhile\label{euclidendwhile}
+  % \State \textbf{return} $b$\Comment{The gcd is b}
+  \end{algorithmic}
+\end{algorithm}
+\end{minipage}
+
+
 \subsection{Finding similar regions}
 
 In order to smooth the profile information, we use Hann window~\cite{blackman1959particular}, which is a discrete window function given by
