--- a/paper/method.tex
+++ b/paper/method.tex
@@ -125,69 +125,34 @@ The FCMs and STMMs include, in fact, count values which need to be saved in memo
 \end{equation*}
 
 
-\begin{minipage}{.55\linewidth}
+\begin{minipage}{.5\linewidth}
 \begin{algorithm}[H]
-  \caption{Count-Min-Log Sketch UPDATE}\label{euclid}
+  \caption{Count-Min-Log Sketch UPDATE and QUERY}\label{euclid}
   \begin{algorithmic}[1]
-    \Require sketch width $w$, sketch depth $d$, log base $b>1$, independent hash functions $h_{1..d}: U\to \{1..w\}$
-    \Function{\textsc{MinCount}}{$e$}
-    \State $\mathrm{minVal}\gets 0$
-    \For{$k\gets 1\mathrm{\;to\;}d$}
-    \If{$\mathrm{sk}[k, h_k(e)] < \mathrm{minVal}$}
-    \State $\mathrm{minVal}\gets \mathrm{sk}[k, h_k(e)]$
-    \EndIf
-    \EndFor
-    \State \textbf{return} minVal
-    \EndFunction
-    \State
+    \Require sketch width $w$, sketch depth $d$, independent hash functions $h_{1..d}: U\to \{1..w\}$
     \Function{\textsc{IncreaseDecision}}{$c$}
-    \State \textbf{return} True with probability $b^{-c}$, else False
+    \State \textbf{return} True with probability $\frac{1}{2^c}$, else False
     \EndFunction
     \State
     \Function{\textsc{Update}}{$e$}
-    \State $c\gets \textsc{MinCount}(e)$
+    \State $c\gets \min_{1\le k\le d}\;\mathrm{sketch}[k, h_k(e)]$
+    % \State $c\gets \textsc{MinCount}(e)$
     \If{$\textsc{IncreaseDecision($c$)}=\mathrm{True}$}
     \For{$k\gets 1\mathrm{\;to\;}d$}
-    \If{$\mathrm{sk}[k, h_k(e)] = c$}
-    \State $\mathrm{sk}[k, h_k(e)]\gets c+1$
+    \If{$\mathrm{sketch}[k, h_k(e)] = c$}
+    \State $\mathrm{sketch}[k, h_k(e)]\gets c+1$
     \EndIf
     \EndFor
     \EndIf
+    \EndFunction
+    \State
+    \Function{\textsc{Query}}{$e$}
+    \State $c\gets \min_{1\le k\le d}\;\mathrm{sketch}[k, h_k(e)]$
+    \State \textbf{return} $2^c-1$
     \EndFunction
   \end{algorithmic}
 \end{algorithm}
 \end{minipage}
-
-\begin{minipage}{.55\linewidth}
-  \begin{algorithm}[H]
-    \caption{Count-Min-Log Sketch QUERY}\label{euclid}
-    \begin{algorithmic}[1]
-      \Require sketch width $w$, sketch depth $d$, log base $b>1$, independent hash functions $h_{1\ldots d}: U\to \{1\ldots w\}$
-      \Function{\textsc{PointValue}}{$c$}
-      \If{$c=0$}
-      \State \textbf{return} $0$
-      \Else{}
-      \State \textbf{return} $b^{c-1}$
-      \EndIf
-      \EndFunction
-      \State
-      \Function{\textsc{Value}}{$e$}
-      \If{$c\le 1$}
-      \State \textbf{return} \textsc{PointValue}($c$)
-      \Else{}
-      \State $v\gets \textsc{PointValue}(c+1)$
-      \State \textbf{return} $\frac{1-v}{1-x}$
-      \EndIf
-      \EndFunction
-      \State
-      \Function{\textsc{Query}}{$e$}
-      \State $c\gets \min_{1\leq k\leq d}\; \mathrm{sk}[k, h_k(e)]$
-      \State \textbf{return} $\textsc{Value}(c)$
-      \EndFunction
-    \end{algorithmic}
-  \end{algorithm}
-\end{minipage}
-
 
 \subsection{Finding similar regions}
 
