--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -75,6 +75,10 @@
 %%%%%  Algorithms
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\algnewcommand{\Inputs}[1]{%
+  \State \textbf{Inputs:}
+  \Statex \hspace*{\algorithmicindent}\parbox[t]{.8\linewidth}{\raggedright #1}
+}
 
 %%%%%  Captions
 \usepackage[figurename=Fig., tablename=Table, labelfont=bf, labelsep=period, font=small]{caption}
