--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -101,7 +101,24 @@ doi="10.1007/s12539-019-00322-1"
   organization={Springer}
 }
 
-
+@article{morris1978counting,
+ author = {Morris, Robert},
+ title = {Counting Large Numbers of Events in Small Registers},
+ journal = {Commun. ACM},
+ //issue_date = {Oct. 1978},
+ volume = {21},
+ number = {10},
+ //month = oct,
+ year = {1978},
+ //issn = {0001-0782},
+ pages = {840--842},
+ //numpages = {3},
+ //url = {http://doi.acm.org/10.1145/359619.359627},
+ //doi = {10.1145/359619.359627},
+ //acmid = {359627},
+ publisher = {ACM},
+ //address = {New York, NY, USA}
+} 
 
 
 
