--- a/paper/method.tex
+++ b/paper/method.tex
@@ -120,7 +120,7 @@ The FCMs and STMMs include, in fact, count values which need to be saved in memo
   \textrm{table of 64 bit counters}, & 1 \leq k \leq 11 \\
   \textrm{table of 32 bit counters}, & k=12, 13 \\
   \textrm{table of 8 bit approximate counters}, & k=14 \\
-  \textrm{Count-Min-Log sketch of 4 bit counters}, & k \ge 15
+  \textrm{Count-Min-Log sketch of 4 bit counters}. & k \ge 15
 \end{cases}
 \end{equation*}
 
@@ -131,7 +131,10 @@ The FCMs and STMMs include, in fact, count values which need to be saved in memo
 \label{fig.struct}
 \end{figure}
 
-The table of 64 bit counters, that is shown in Fig.~\ref{fig.struct}a, simply saves number of events for each context. The table of 32 bit counters, Fig.~\ref{fig.struct}b, saves in each position the number of times that the associated context is observed. When a counter reaches to the maximum value $2^{32}-1=4294967295$, the counts will be renormalized.
+The table of 64 bit counters, that is shown in Fig.~\ref{fig.struct}a, simply saves number of events for each context. The table of 32 bit counters saves in each position the number of times that the associated context is observed. When a counter reaches to the maximum value $2^{32}-1=4294967295$, all the counts will be renormalized by dividing by two, as shown in Fig.~\ref{fig.struct}b.
+
+The approximate counting is a method that employs probabilistic techniques to count large number of events while using small amount of memory~\cite{morris1978counting}. Algorithm~\ref{alg.approx} shows two major functions associated with this method, that are \textsc{Update} and \textsc{Query}. In order to update the counter, a pseudo-random number generator (PRNG) is used the number of times of the counter's current value to simulate flipping a coin. If it comes up 0/Heads each time or 1/Tails each time, the counter will be incremented.
+
 
 \begin{center}
 \begin{minipage}[t]{.6\linewidth}
