--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -79,6 +79,8 @@
   \State \textbf{Inputs:}
   \Statex \hspace*{\algorithmicindent}\parbox[t]{.8\linewidth}{\raggedright #1}
 }
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 %%%%%  Captions
 \usepackage[figurename=Fig., tablename=Table, labelfont=bf, labelsep=period, font=small]{caption}
