--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -118,9 +118,15 @@ doi="10.1007/s12539-019-00322-1"
  //acmid = {359627},
  publisher = {ACM},
  //address = {New York, NY, USA}
-} 
+}
 
-
+@inproceedings{pitel2015count,
+  title={Count-min-log sketch: Approximately counting with approximate counters},
+  author={Pitel, Guillaume and Fouquier, Geoffroy},
+  booktitle={{International Symposium on Web AlGorithms}},
+  year={Jun 2015},
+  address = {Deauville, France}
+}
 
 
 
