--- a/paper/method.tex
+++ b/paper/method.tex
@@ -133,7 +133,7 @@ The FCMs and STMMs include, in fact, count values which need to be saved in memo
 
 The table of 64 bit counters, that is shown in Fig.~\ref{fig.struct}a, simply saves number of events for each context. The table of 32 bit counters saves in each position the number of times that the associated context is observed. When a counter reaches to the maximum value $2^{32}-1=4294967295$, all the counts will be renormalized by dividing by two, as shown in Fig.~\ref{fig.struct}b.
 
-The approximate counting is a method that employs probabilistic techniques to count large number of events, while using small amount of memory~\cite{morris1978counting}. Fig.~\ref{alg.approx} shows the algorithm for two major functions associated with this method, \textsc{Update} and \textsc{Query}. In order to update the counter, a pseudo-random number generator (PRNG) is used the number of times of the counter's current value to simulate flipping a coin. If it comes up 0/Heads each time or 1/Tails each time, the counter will be incremented. In Fig.~\ref{fig.struct}c, the difference between arithmetic and approximate counting, and also the value which is actually stored in memory are shown. Note that by approximate counting, one needs only to save the exponent. For example, if the count is $8$, we store $\log_2 8=3$ in memory.
+The approximate counting is a method that employs probabilistic techniques to count large number of events, while using small amount of memory~\cite{morris1978counting}. Fig.~\ref{alg.approx} shows the algorithm for two major functions associated with this method, \textsc{Update} and \textsc{Query}. In order to update the counter, a pseudo-random number generator (PRNG) is used the number of times of the counter's current value to simulate flipping a coin. If it comes up 0/Heads each time or 1/Tails each time, the counter will be incremented. In Fig.~\ref{fig.struct}c, the difference between arithmetic and approximate counting, and also the values which are actually stored in memory are shown. Note that since an approximate counter represents the actual count by an order of magnitude estimate, one only needs to save the exponent. For example, if the actual count is $8$, we store it as $\log_2 8=3$ in memory.
 \begin{figure}[b]
   \centering
   \begin{tabular}{|c|}
@@ -168,6 +168,15 @@ The approximate counting is a method that employs probabilistic techniques to co
 
 The Count-Min-Log Sketch (CMLS) is a probabilistic data structure to save frequency of events in a table by means of a family of independent hash functions~\cite{pitel2015count}. The algorithm for updating and querying the counter is shown in Fig.~\ref{alg.cmls}. In order to update the counter, its current value is hashed with $d$ independent hash functions. Then, a coin is flipped the number of times of the counter's current value, employing a pseudo-random number generator. If it comes up 0/Heads each time or 1/Tails each time, the minimum hashed values (out of $d$ values) will be updated, as shown in Fig.~\ref{fig.struct}d.
 
+The CMLS requires a family of pairwise independent hash functions
+$H = \{h: U \to [m]\}$, in which each function $h$ maps some universe $U$ to $m$ bins. 
+To have this family, we use universal hashing by randomly selecting a hash function from a universal family in which $\forall x,y\in U,~x\neq y:~~\Pr _{h\in H}[h(x)=h(y)]\leq \frac{1}{m}$.
+The hash function can be obtained by
+\begin{equation}
+  h_{a,b}(x)=\left((ax+b)~\bmod p\right)~\bmod m,
+\end{equation}
+where $p\ge m$ is a prime number and $a$ and $b$ are randomly chosen integers modulo $p$ with $a\neq 0$.
+
 \begin{figure}[t]
   \centering
   \begin{tabular}{|c|}
@@ -175,11 +184,11 @@ The Count-Min-Log Sketch (CMLS) is a probabilistic data structure to save freque
   \begin{minipage}[t]{.55\linewidth}
     \vspace{0pt}
     \begin{algorithmic}[1]
-      \Require sketch width $w$, sketch depth $d$, randomly chosen integers $a_{1..d}$ and $b_{1..d}$, $m$ bins, prime $p\ge m$
+      \Require sketch width $w$, sketch depth $d$, $m$ bins, prime $p\ge m$, randomly chosen integers $a_{1..d}$ and $b_{1..d}$ modulo $p$ with $a\neq 0$
       % independent hash functions $h_{1..d}: U\to \{1..w\}$
       \Statex
       \Function{\textsc{Hash}}{$k, x$} \Comment{Universal hash family}
-      \State \textbf{return} $\left((a_k x + b_k)\mod p\right)\mod m$
+      \State \textbf{return} $\left((a_k x + b_k)~\bmod p\right)~\bmod m$
       \EndFunction
       \State
       \Function{\textsc{MinCount}}{$x$}
