--- a/paper/method.tex
+++ b/paper/method.tex
@@ -233,6 +233,8 @@ where $p\ge m$ is a prime number and $a$ and $b$ are randomly chosen integers mo
 
 \subsection{Finding similar regions}
 
+Fig.~\ref{fig.simil}
+
 \begin{figure}[!h]
   \centering
 \includegraphics[width=.95\linewidth]{simil.pdf}
@@ -255,6 +257,7 @@ where $0\le n\le N$ and length of the window is $N+1$ (Fig.~\ref{fig.hann}).
 \end{figure}
 
 \subsection{Computing complexities}
+Kolmogorov
 
 \subsection{The software}
 \label{subsec.software}
