--- a/paper/method.tex
+++ b/paper/method.tex
@@ -63,16 +63,11 @@ The schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. \smas
 \end{figure}
 
 \subsection{Data modeling}
-\smashpp works on the basis of cooperation between finite-context models (FCMs) and substitutional tolerant Markov models (STMMs), as illustrated in Fig.~\ref{fig.model}. 
-
-% todo
-\textcolor{red}{ba joziat tozih bede}
-
-Applying these models on various contexts, seen in the past, provides probability and weight values which are then mixed to provide the final probability ($P$) of the next symbol, G in this case. The following subsections describe FCMs and STMMs in detail.
+\smashpp works on the basis of cooperation between finite-context models (FCMs) and substitutional tolerant Markov models (STMMs). Applying these models on various contexts, provides probability and weight values, illustrated in Fig.~\ref{fig.model}a, which are then mixed (by multiplication and addition, shown in Fig.~\ref{fig.model}b) to provide the final probability ($P$) of occurring an input symbol. The following subsections describe FCMs and STMMs in detail.
 
 \begin{figure}[!h]
   \centering
-% \includegraphics[width=.85\linewidth]{data_model.pdf}
+\includegraphics[width=.85\linewidth]{data_model.pdf}
 \caption{model.}
 \label{fig.model}
 \end{figure}
