--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -128,6 +128,15 @@ doi="10.1007/s12539-019-00322-1"
   address = {Deauville, France}
 }
 
+@article{pratas2015alignment,
+  title={An alignment-free method to find and visualise rearrangements between pairs of {DNA} sequences},
+  author={Pratas, Diogo and Silva, Raquel M and Pinho, Armando J and Ferreira, Paulo JSG},
+  journal={Scientific reports},
+  volume={5},
+  pages={10203},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
 
 
 
@@ -438,16 +447,6 @@ doi="10.1007/s12539-019-00322-1"
   author={Sayood, Khalid},
   year={2017},
   publisher={Morgan Kaufmann}
-}
-
-@article{pratas2015alignment,
-  title={{An alignment-free method to find and visualise rearrangements between pairs of DNA sequences}},
-  author={Pratas, Diogo and Silva, Raquel M and Pinho, Armando J and Ferreira, Paulo JSG},
-  journal={Scientific reports},
-  volume={5},
-  pages={10203},
-  year={2015},
-  publisher={Nature Publishing Group}
 }
 
 @article{hosseini2018cryfa,
